# AssignmentB

./: AirInstrument.cpp  AirInstrument.h  CMakeLists.txt  Instrument.cpp  Instrument.h  Kompletteringar_B.txt  README.md  StringInstrument.cpp  StringInstrument.h  TestVirkeManager.cpp  TestVirkeManager.h  Todo.txt  deltagare.cpp  deltagare.h  infoForNoobs.txt  main.cpp  manager.h  menu.h  motionar.cpp  motionar.h  paneler.cpp  paneler.h  professionell.cpp  professionell.h  progress.md  ramar.h  register.cpp  register.h  reglar.cpp  reglar.h  resolve-err.txt  system.cpp  system.h  test.cpp  virke.cpp  virke.h  virkemanager.cpp  virkemanager.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
